--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,9 @@ body{
     margin-top: 19px;
 }
 .prod-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: 2px solid rgb(93, 81, 81);
     border-radius: 8px;
     width: 200px;
@@ -99,4 +102,14 @@ body{
     border: none;
     background-color: rgb(12, 238, 211);
     border-radius: 50%;
+}
+.remove-btn{
+    align-self: flex-end;
+    left: 1px;
+    top: 5px;
+    text-align: center;
+    border-radius: 50%;
+}
+.remove-btn:hover{
+    background-color: rgba(207, 207, 207, 0.71);
 }
